--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "firebase": "^9.9.2"
+    "firebase": "^9.9.2",
+    "react-firebase-hooks": "^5.0.3"
   }
 }
